--- a/config/database.yml
+++ b/config/database.yml
@@ -24,6 +24,7 @@ default: &default
 development:
   <<: *default
   database: food_ordering_development
+  password: 125125
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,6 +59,7 @@ development:
 test:
   <<: *default
   database: food_ordering_test
+  password: 125125
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,4 +84,4 @@ production:
   <<: *default
   database: food_ordering_production
   username: food_ordering
-  password: <%= ENV['FOOD_ORDERING_DATABASE_PASSWORD'] %>
+  password: <%= ENV['125125'] %>
